--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/google_homepage/css/style.css" />
+  <link rel="stylesheet" href="/css/style.css" />
   <title>Google</title>
 </head>
 
@@ -14,12 +14,12 @@
     <nav>
       <ul class="header">
         <li class="pic headerli">
-          <a href="https://www.github.com/cengizcmataraci" target="_blank"><img
-              src="/google_homepage/assets/profilepicc.jpg" alt="" style="margin-right: 1px;" /></a>
+          <a href="https://www.github.com/gokberkotlu" target="_blank"><img
+              src="/assets/profilepic.jpg" alt="" style="margin-right: 1px;" /></a>
         </li>
         <li style="margin: 8px" class="headerli">
           <a href="https://www.google.com.tr/intl/en/about/products?tab=wh"><img
-              src="/google_homepage/assets/appsbutton.svg" alt=""
+              src="/assets/appsbutton.svg" alt=""
               style="width: 16px; height: 16px; margin-right: 3px;"></a>
         </li>
         <li style="margin: 8px; margin-left: -2px;" class="headerli">
@@ -31,7 +31,7 @@
       </ul>
     </nav>
     <div class="container">
-      <img src="/google_homepage/assets/logo.png" width="272" alt="" />
+      <img src="/assets/logo.png" width="272" alt="" />
     </div>
     <div class="search-area">
       <div class="search">
@@ -52,21 +52,10 @@
       <!-- Input Tools : Transliteration Tool & Search by Voice -->
       <div class="input-tools">
         <span>
-          <img src="https://www.google.com/tia/tia.png">
+          <img src="https://www.google.com/tia/tia.png" alt="">
         </span>
         <span>
-          <svg class="goxjub" focusable="false" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
-            style="width: 24px; height: 24px; padding: 0;">
-            <path fill="#4285f4"
-              d="m12 15c1.66 0 3-1.31 3-2.97v-7.02c0-1.66-1.34-3.01-3-3.01s-3 1.34-3 3.01v7.02c0 1.66 1.34 2.97 3 2.97z">
-            </path>
-            <path fill="#34a853" d="m11 18.08h2v3.92h-2z"></path>
-            <path fill="#fbbc05"
-              d="m7.05 16.87c-1.27-1.33-2.05-2.83-2.05-4.87h2c0 1.45 0.56 2.42 1.47 3.38v0.32l-1.15 1.18z"></path>
-            <path fill="#ea4335"
-              d="m12 16.93a4.97 5.25 0 0 1 -3.54 -1.55l-1.41 1.49c1.26 1.34 3.02 2.13 4.95 2.13 3.87 0 6.99-2.92 6.99-7h-1.99c0 2.92-2.24 4.93-5 4.93z">
-            </path>
-          </svg>
+          <img src="./assets/voicelogo.png" alt="Google Logo" style="width: 24px; height: 24px; padding: 0;">
         </span>
       </div>
       </div>
