--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="./css/style.css" />
   <title>Google</title>
 </head>
 
@@ -15,11 +15,11 @@
       <ul class="header">
         <li class="pic headerli">
           <a href="https://www.github.com/gokberkotlu" target="_blank"><img
-              src="/assets/profilepic.jpg" alt="" style="margin-right: 1px;" /></a>
+              src="./assets/profilepic.jpg" alt="" style="margin-right: 1px;" /></a>
         </li>
         <li style="margin: 8px" class="headerli">
           <a href="https://www.google.com.tr/intl/en/about/products?tab=wh"><img
-              src="/assets/appsbutton.svg" alt=""
+              src="./assets/appsbutton.svg" alt=""
               style="width: 16px; height: 16px; margin-right: 3px;"></a>
         </li>
         <li style="margin: 8px; margin-left: -2px;" class="headerli">
@@ -31,7 +31,7 @@
       </ul>
     </nav>
     <div class="container">
-      <img src="/assets/logo.png" width="272" alt="" />
+      <img src="./assets/logo.png" width="272" alt="" />
     </div>
     <div class="search-area">
       <div class="search">
